welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:5: error: not found: value negaive
	else if (a<=0 && b<=0 && negaive==true) {
                                 ^