welcome.lessons.welcome.bat.bool1.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
	if (a<=0 || b<=0) {
		return true;
	}
	else if (a<=0 && b<=0 && negaive==true) {
		return false;
	}
	else {return false}
}
